force-app/main/default/objects/DFJ_MembershipObjectConfiguration__mdt/DFJ_MembershipObjectConfiguration__mdt.object-meta.xml
<CustomObject>
    <label>DFJ_MembershipObjectConfiguration</label>
    <pluralLabel>DFJ_MembershipObjectConfigurations</pluralLabel>
</CustomObject>