force-app/main/default/objects/DFJ_MembershipObjectConfiguration__mdt/fields/MembershipObject_name__c.field-meta.xml
<CustomField>
    <fullName>MembershipObject_name__c</fullName>
    <label>MembershipObject name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>