force-app/main/default/objects/DFJ_MembershipObjectConfiguration__mdt/fields/Person1_Membership_Condition_logic__c.field-meta.xml
<CustomField>
    <fullName>Person1_Membership_Condition_logic__c</fullName>
    <label>Person1 Membership Condition logic</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>