force-app/main/default/objects/DFJ_MembershipObjectConfiguration__mdt/fields/Person1_Membership_Contition__c.field-meta.xml
<CustomField>
    <fullName>Person1_Membership_Contition__c</fullName>
    <description>It stores the Conditions for creating the membership for person1</description>
    <label>Person1 Membership Contition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>