force-app/main/default/objects/DFJ_MembershipObjectConfiguration__mdt/fields/Person2_Membership_Contition__c.field-meta.xml
<CustomField>
    <fullName>Person2_Membership_Contition__c</fullName>
    <label>Person2 Membership Contition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>