force-app/main/default/objects/DFJ_MembershipObjectConfiguration__mdt/fields/Record_Model_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Model_Id__c</fullName>
    <label>Record Model Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>